k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phoenix-app
  labels:
    name: phoenix-app
    app: phoenix-reviews
